--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -284,7 +284,6 @@ p {
   top: 100px;
   left: 50%;
   z-index: 9999;
-  display: none;
   margin-left: -40%;
   width: 80%;
   border-radius: 4px;
@@ -297,12 +296,11 @@ p {
   top: 0;
   left: 0;
   z-index: 9998;
-  display: none;
   width: 100%;
   height: 100%;
   background: #000;
   opacity: .7;
-  filter: alpha(opacity=70)
+  filter: alpha(opacity=70);
 }
 .nothing2 {
   height: 30px;
